feat: weather history

--- a/OpenWeather.Api/appsettings.json
+++ b/OpenWeather.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"Database": "Server=localhost,1433;User ID=SA;Password=etVRD#b0DXh@94BU;Initial Catalog=OpenWeather;Persist Security Info=False;"
+    //"Database": "Server=localhost,1433;User ID=SA;Password=etVRD#b0DXh@94BU;Initial Catalog=OpenWeather;Persist Security Info=False;" //running locally, outside a container
     "Database": "Server=sqlserver,1433;User ID=SA;Password=etVRD#b0DXh@94BU;Initial Catalog=OpenWeather;Persist Security Info=False;"
   },
   "OpenWeatherBaseUrl": "https://api.openweathermap.org/",
